--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.2"
+    "react-helmet-async": "^2.0.4",
+    "react-router-dom": "^6.22.2",
+    "yarn": "^1.22.21"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
