--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-router-dom": "^6.22.2",
+    "typewriter-effect": "^2.21.0",
     "yarn": "^1.22.21"
   },
   "devDependencies": {
