--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-helmet-async": "^2.0.4",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
+    "styled-components": "^6.1.8",
     "typewriter-effect": "^2.21.0",
     "yarn": "^1.22.21"
   },
